Adding project info to several pages

--- a/about_me.html
+++ b/about_me.html
@@ -317,7 +317,7 @@
 
         <!-- Resume -->
         <div class="mx-2">
-          <a class="fa fa-file" href="docs/current/Vargas,Amy-Resume(CS).pdf" download style="color:#000000;" role="button">
+          <a class="fa fa-file" href="docs/current/Vargas,Amy-Resume-CS.pdf" download style="color:#000000;" role="button">
           </a>
         </div>
       </div>
