--- a/projects_pages/3d-modeling-projects.html
+++ b/projects_pages/3d-modeling-projects.html
@@ -101,15 +101,15 @@
           </div>
           <div class = "col-5 mx-5">
             <h4 class = "text-center"> Tinkerer Library </h4>
-            <p> 
-              ...
+            <p class = "text-center"> 
+              A collection of 24 props reflecting the personality of a robotic character, drawing inspiration from steampunk and cyberpunk elements and rendered in Autodesk Maya.
             </p>
             <br>
             <p class = "m-0" style="font-weight: bold;"> 3D Enviromental Modeler </p>
-            <p> 
-              • POINT 1
-              <br> • POINT 2
-              <br> • POINT 3
+            <p>
+              • Conceptualized and developed a 3D environmental model of a steampunk-inspired room, tailored to reflect the personality of an original character.
+              <br> • Designed 24 custom scenery props using hard surface model techniques.
+              <br> • Applied advanced 3D modeling and texturing techniques to add intricate details into the project.
             </p>
             <div class = "d-flex justify-content-center">
               <a class="fa fa-globe mx-2" href="https://www.artstation.com/artwork/LRgmGk" style="color:#000000;" role="button"> </a>
@@ -173,15 +173,15 @@
           </div>
           <div class = "col-5 mx-5">
             <h4 class = "text-center"> Steampunk Assets </h4>
-            <p> 
-              ...
+            <p class = "text-center"> 
+              Various textured and untextured assets created as a part of a steampunk-inspired environment and rendered in Autodesk Maya.
             </p>
             <br>
             <p class = "m-0" style="font-weight: bold;"> 3D Enviromental Modeler </p>
             <p> 
-              • POINT 1
-              <br> • POINT 2
-              <br> • POINT 3
+              • Modeled 24 custom steampunk props in Autodesk Maya, using advanced hard surface techniques to ensure detailed and authentic designs.
+              <br> • Incorporated references and design inspiration to create unique scenery elements for a steampunk-themed environment.
+              <br> • Applied advanced texturing techniques to enhance the detail and realism of each prop, contributing to a rich, immersive atmosphere.
             </p>
             <div class = "d-flex justify-content-center">
               <a class="fa fa-globe mx-2" href="https://www.artstation.com/artwork/elmxo3" style="color:#000000;" role="button"> </a>
@@ -234,15 +234,17 @@
           </div>
           <div class = "col-5 mx-5">
             <h4 class = "text-center"> The Dining Room </h4>
-            <p> 
-              ...
+            <p class = "text-center"> 
+              A detailed environmental model of a Victorian-inspired dining room that was rendered in Autodesk Maya.
             </p>
             <br>
             <p class = "m-0" style="font-weight: bold;"> 3D Environmental Modeler/Designer </p>
             <p> 
-              • POINT 1
-              <br> • POINT 2
-              <br> • POINT 3
+              • Conceptualized and developed a detailed 3D environmental model portraying a Victorian-inspired dining room, 
+              drawing inspiration from personal real-life surroundings.
+              <br> • Employed advanced techniques to optimize and refine the geometry of hard surface models for custom scenery
+               props, ensuring precision and realism.
+              <br> • Implemented shading trees, natural lighting, and customized UV maps and textures using Adobe Photoshop.
             </p>
             <div class = "d-flex justify-content-center">
               <a class="fa fa-globe mx-2" href="https://www.artstation.com/artwork/D5wlx9" style="color:#000000;" role="button"> </a>
@@ -291,15 +293,15 @@
           </div>
           <div class = "col-5 mx-5">
             <h4 class = "text-center"> Individual Hand </h4>
-            <p> 
-              ...
+            <p class = "text-center"> 
+              A human hand, with my own hand as a reference, rendered in Autodesk Maya.
             </p>
             <br>
             <p class = "m-0" style="font-weight: bold;"> 3D Enviromental Modeler </p>
             <p> 
-              • POINT 1
-              <br> • POINT 2
-              <br> • POINT 3
+              • Created a highly detailed 3D model of my own hand using organic modeling techniques in Autodesk Maya, capturing intricate anatomical details.
+              <br> • Applied rigging and posing techniques to ensure realistic movement and appearance, enhancing the overall fidelity of the model.
+              <br> • Utilized photographs of my own hand as reference for accuracy in modeling, ensuring a realistic and true-to-life representation.
             </p>
             <div class = "d-flex justify-content-center">
               <a class="fa fa-globe mx-2" href="https://www.artstation.com/artwork/Ge89vQ" style="color:#000000;" role="button"> </a>
@@ -348,15 +350,15 @@
           </div>
           <div class = "col-5 mx-5">
             <h4 class = "text-center"> Amazon Box </h4>
-            <p> 
-              ...
+            <p class = "text-center"> 
+              A rigged and textured 3D model of an Amazon delivery box rendered in Autodesk Maya.
             </p>
             <br>
             <p class = "m-0" style="font-weight: bold;"> 3D Enviromental Modeler </p>
             <p> 
-              • POINT 1
-              <br> • POINT 2
-              <br> • POINT 3
+              • Developed a detailed 3D model of an Amazon box using hard surface modeling techniques, ensuring high accuracy and realism in the design.
+              <br> • Rigged the box to simulate realistic folding and unfolding mechanics, replicating the functionality of a real-life box.
+              <br> • Textured the model using real-life photographs, enhancing visual authenticity and detail to closely match the appearance of an actual Amazon box.
             </p>
             <div class = "d-flex justify-content-center">
               <a class="fa fa-globe mx-2" href="https://www.artstation.com/artwork/OGmO3b" style="color:#000000;" role="button"> </a>
@@ -411,15 +413,15 @@
           </div>
           <div class = "col-5 mx-5">
             <h4 class = "text-center"> Flower Vases </h4>
-            <p> 
-              ...
+            <p class = "text-center"> 
+              An intricate model of a realistic vase containing calla lilies, cosmos, daisies, and jasmines.            
             </p>
             <br>
             <p class = "m-0" style="font-weight: bold;"> 3D Enviromental Modeler </p>
             <p> 
-              • POINT 1
-              <br> • POINT 2
-              <br> • POINT 3
+              • Created a detailed 3D model of a flower vase with four individual flower models, using organic modeling techniques for high accuracy.
+              <br> • Modeled each flower based on real-life pictures, ensuring realistic representations of natural forms.
+              <br> • Applied intricate detailing to both the vase and flowers, achieving a visually immersive design.
             </p>
             <div class = "d-flex justify-content-center">
               <a class="fa fa-globe mx-2" href="https://www.artstation.com/artwork/n0E1d6" style="color:#000000;" role="button"> </a>
