--- a/projects_pages/graphic-design-projects.html
+++ b/projects_pages/graphic-design-projects.html
@@ -192,14 +192,17 @@
           <div class = "col-5 mx-5">
             <h4 class = "text-center"> HomeSafe </h4>
             <p> 
-              HomeSafe is ...
+              HomeSafe is the ideal app for those seeking comfort and security in their homes. With its user-friendly
+               interface, you can easily access and monitor your home from anywhere, at any time, bringing you peace of 
+               mind like never before. HomeSafe provides you with top-notch security features, including easy-to-connect 
+               cameras and doorbells, all aimed at protecting your home from theft and vandalism.
             </p>
             <br>
             <p class = "m-0" style="font-weight: bold;"> UI Designer </p>
             <p> 
-              • POINT 1
-              <br> • Designed wireframes and UI screens in Adobe XD and created icons using Adobe Illustrator.
-              <br> • POINT 3.
+              • Designed and developed user interfaces and wireframes, creating intuitive layouts and interactive elements to enhance user experience for real-time home security features.
+              <br> • Conducted user research through surveys and developed user personas, which informed the app’s design and functionality to better meet the needs of diverse users.
+              <br> • Created mood boards and performed comparative analysis, ensuring the app’s concept and design were aligned with industry standards and competitive offerings for a comprehensive security solution.
             </p>
             <div class = "d-flex justify-content-center">
               <a class="fa fa-globe mx-2" href="https://drive.google.com/file/d/1gePI55lBpM3wjiDZD9mwboMPneM7tgGt/view?usp=sharing" style="color:#000000;" role="button"> </a>
@@ -268,17 +271,20 @@
           <div class = "col-5 mx-5">
             <h4 class = "text-center"> Scavenger Hunt Case Study </h4>
             <p> 
-              ...
+              This case study explores the "Adventure Aquarium Scavenger Hunt" app, designed to engage visitors in a pirate-themed 
+              scavenger hunt with prize opportunities. It includes personas, mock ethnographic research, and usability testing with 
+              System Usability Scales and think-aloud methods. This analysis presents how the UX effectively meets its intended goals, 
+              while highlighting key strengths and areas for improvement.
             </p>
             <br>
-            <p class = "m-0" style="font-weight: bold;"> UI Designer </p>
+            <p class = "m-0" style="font-weight: bold;"> UI/UX Researcher </p>
             <p> 
-              • POINT 1
-              <br> • POINT 2
-              <br> • POINT 3
+              • Developed a user persona for the "Adventure Aquarium Scavenger Hunt" app, identifying potential issues and proposing solutions to enhance user engagement and address specific challenges.
+              <br> • Created and administered a System Usability Scale (SUS) form and a think-aloud testing session, analyzing the app’s usability and effectiveness in meeting user needs.
+              <br> • Designed the presentation to align with the app's pirate-themed aesthetic, ensuring a cohesive and engaging report.
             </p>
             <div class = "d-flex justify-content-center">
-              <a class="fa fa-globe mx-2" href="..." style="color:#000000;" role="button"> </a>
+              <a class="fa fa-globe mx-2" href="https://docs.google.com/presentation/d/1eQUFyGWSV5C4MJ0pXFGy0YXvgpZFuu4t/pub?start=true&loop=true&delayms=3000" style="color:#000000;" role="button"> </a>
             </div>
           </div>
         </div>
@@ -341,17 +347,22 @@
           <div class = "col-5 mx-5">
             <h4 class = "text-center"> BrilliantBooks </h4>
             <p> 
-              ...
+              BrilliantBooks is your go-to reading app that turns every book into a rewarding experience. It offers 
+              interactive quizzes to ensure you’re engaging with the content and rewards you with badges for your 
+              milestones. Create and share personalized reading lists, rate and review books, and build a profile 
+              that highlights your reading journey and achievements. With BrilliantBooks, tracking progress and 
+              celebrating literary accomplishments has never been more enjoyable.
             </p>
             <br>
             <p class = "m-0" style="font-weight: bold;"> UI Designer </p>
             <p> 
-              • POINT 1
-              <br> • POINT 2
-              <br> • POINT 3
+              • Designed and developed mobile and web UI screens and icons for BrilliantBooks, enhancing user experience through intuitive interactions and visual appeal.
+              <br> • Conceptualized and implemented interactive features including quizzes, badges, and personalized profiles, in collaboration with two team members.
+              <br> • Created user-centric designs for reading lists, book ratings, and reviews, effectively translating the app’s core functionalities into engaging user interfaces.
             </p>
             <div class = "d-flex justify-content-center">
-              <a class="fa fa-globe mx-2" href="..." style="color:#000000;" role="button"> </a>
+              <a class="fa fa-globe mx-2" href="https://xd.adobe.com/view/82bab23d-5cf8-47f4-b628-6124987cf4f5-d7e9/" style="color:#000000;" role="button"> </a>
+              <a class="fa fa-globe mx-2" href="https://xd.adobe.com/view/1ca50a3d-18e7-4257-96f3-f71e4c85b426-49f6/" style="color:#000000;" role="button"> </a>
             </div>
           </div>
         </div>
@@ -386,17 +397,19 @@
           <div class = "col-5 mx-5">
             <h4 class = "text-center"> Making Smoothies </h4>
             <p> 
-              ...
+              Making Smoothies is an experience map, a tool that details the process of making a smoothie. My classmate and I 
+              carefully considered and documented the range of emotions an individual might experience at each step. This map 
+              visually represents these emotional journeys, providing insights into the experience.
             </p>
             <br>
             <p class = "m-0" style="font-weight: bold;"> UI Designer </p>
             <p> 
-              • POINT 1
-              <br> • POINT 2
-              <br> • POINT 3
+              • Created an experience map in Figma for making a smoothie, documenting the emotional journey of users through each step, including both positive and negative feelings.
+              <br> • Synthesized key insights, analyzing user interactions to understand how and why people engage with the product in specific ways.
+              <br> • Developed actionable recommendations based on the map, aiming to enhance the user experience and streamline the smoothie-making process.
             </p>
             <div class = "d-flex justify-content-center">
-              <a class="fa fa-globe mx-2" href="..." style="color:#000000;" role="button"> </a>
+              <a class="fa fa-globe mx-2" href="https://drive.google.com/file/d/1y-aZqI5Z_D_PepacRSrX27xU7aZA5Wx8/view?usp=sharing" style="color:#000000;" role="button"> </a>
             </div>
           </div>
         </div>
@@ -456,17 +469,23 @@
           <div class = "col-5 mx-5">
             <h4 class = "text-center"> User Screen Variety </h4>
             <p> 
-              ...
+              I designed and developed 9 different UI sample screens, including pages like a Food/Drink Menu, 
+              Splash Screen, Sign-up Page, Color Picker, Notes, Music Screen, Timer, Job Listing, and DM. My 
+              approach focused on incorporating visually appealing and intuitive icons to enhance future functionality 
+              while ensuring clarity for standard users. Additionally, I created interactive elements for the 
+               Food/Drink Menu and Music Screen, which showcases potential user engagement.
             </p>
             <br>
             <p class = "m-0" style="font-weight: bold;"> UI Designer </p>
             <p> 
-              • POINT 1
-              <br> • POINT 2
-              <br> • POINT 3
+              • Designed 9 UI screens, including pages such as the Food/Drink Menu, Splash Screen, Sign-up Page, Color Picker, Notes, Music Screen, Timer, Job Listing, and DM Page, with intuitive icons for improved functionality.
+              <br> • Developed top and bottom navigation bars with tabs, ensuring clear and user-friendly access.
+              <br> • Created interactive elements for the Food/Drink Menu and Music Screen to showcase user engagement and experience.
             </p>
             <div class = "d-flex justify-content-center">
-              <a class="fa fa-globe mx-2" href="..." style="color:#000000;" role="button"> </a>
+              <a class="fa fa-globe mx-2" href="https://drive.google.com/file/d/1Hd4thj7hefMAEUoSfTdBhhAtFwIy0B5T/view?usp=sharing" style="color:#000000;" role="button"> </a>
+              <a class="fa fa-globe mx-2" href="https://drive.google.com/file/d/181FszUkYNQEprhCwdBo5OtawQev_dt1w/view?usp=sharing" style="color:#000000;" role="button"> </a>
+              <a class="fa fa-globe mx-2" href="https://drive.google.com/file/d/1OY719GiBgrn0ExxgvWaI_z4lDPdKRI0l/view?usp=sharing" style="color:#000000;" role="button"> </a>
             </div>
           </div>
         </div>
@@ -529,17 +548,21 @@
           <div class = "col-5 mx-5">
             <h4 class = "text-center"> PlantMe-NJ </h4>
             <p> 
-              ...
+              PlantMe-NJ, an Android gardening app tailored for New Jersey, aims to enhance planting seasons. It includes 
+              a personalized plant selection quiz based on user preferences and local conditions, alongside real-time weather
+               updates. Additionally, an AR feature was planned to visualize potential plants in chosen locations.
             </p>
             <br>
             <p class = "m-0" style="font-weight: bold;"> UI Designer </p>
             <p> 
-              • POINT 1
-              <br> • POINT 2
-              <br> • POINT 3
+              • Designed user interfaces for a gardening-focused mobile application, including 3D models of vegetable and fruit crops to enhance visual engagement.
+              <br> • Conceptualized and created a custom logo and mobile icons, tailored to reflect the app’s gardening theme and user experience.
+              <br> • Contains functionality such as plant detail views, weather conditions, a plant matching quiz, and 3D AR visualization, providing a comprehensive and interactive gardening tool.
             </p>
             <div class = "d-flex justify-content-center">
-              <a class="fa fa-globe mx-2" href="..." style="color:#000000;" role="button"> </a>
+              <a class="fa fa-globe mx-2" href="https://drive.google.com/file/d/1rLkvOSMwZ5Xgp8kgVQBtAWeJpSnYSYaE/view?usp=sharing" style="color:#000000;" role="button"> </a>
+              <a class="fa fa-globe mx-2" href="https://drive.google.com/file/d/1iJzxgZM9GeKYvWbbDZ26kMlZjcV2VOWL/view?usp=sharing" style="color:#000000;" role="button"> </a>
+              <a class="fa fa-globe mx-2" href="https://drive.google.com/file/d/1Dw9XqfMYx2M56hCrN42eak5Vrkqhx_yg/view?usp=sharing" style="color:#000000;" role="button"> </a>
             </div>
           </div>
         </div>
@@ -577,17 +600,19 @@
           <div class = "col-5 mx-5">
             <h4 class = "text-center"> Music Interaction </h4>
             <p> 
-              ...
+              The two UI screens are intended for two separate Max8 projects, designed specifically for music interaction of 'Clair de Lune' and 'Careless Whisper'. These screens 
+              allow users to play and stop music, as well as adjust pitch, timbre, tempo, and the volume of melody and harmony.
             </p>
             <br>
             <p class = "m-0" style="font-weight: bold;"> UI Designer </p>
             <p> 
-              • POINT 1
-              <br> • POINT 2
-              <br> • POINT 3
+
+              • Created 2 UI screens for Max8 projects, enabling interactions for playing, stopping music, and adjusting pitch, timbre, tempo, and volume of melody and harmony.
+              <br> • Designed the UI screens to align with the music project's background, ensuring a visually cohesive and engaging experience.
+              <br> • Implemented intuitive controls for precise manipulation of sound parameters, enhancing user interaction and functionality.
             </p>
             <div class = "d-flex justify-content-center">
-              <a class="fa fa-globe mx-2" href="..." style="color:#000000;" role="button"> </a>
+              <a class="fa fa-globe mx-2" href="https://drive.google.com/file/d/16RMum11Y8euq3WS6f2bjwADnPVruSmPq/view?usp=sharing" style="color:#000000;" role="button"> </a>
             </div>
           </div>
         </div>
