--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   </head>
   <body>
     <!-- Navigation Bar-->
+    <!--     <nav class="navbar navbar-expand-lg navbar-light navbar-custom"> -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class = "navbar-brand" href="index.html">
         <span><img alt = "Brand" src = "images/profilePicALT-noName.png"></span>
