--- a/about_me.html
+++ b/about_me.html
@@ -72,7 +72,7 @@
               I'm Amy, a versatile professional with experience in programming, design, and 3D modeling, actively seeking opportunities to apply my diverse skill set. 
             </p>
             <p>
-              I was previously employed as an Analyst Trainee at the Department of the Treasury where I conducted research for state contracts and facilitated internal and external communication. 
+              I am currently involved in an indie game development group where I serve as Lead Developer. 
               Additionally, I served as a Learning Assistant, guiding students in game development at The College of New Jersey. 
             </p>
             <p>
