--- a/projects_pages/3d-modeling-projects.html
+++ b/projects_pages/3d-modeling-projects.html
@@ -412,7 +412,7 @@
               </div>
             </div>
             <div class = "col-5 mx-5">
-              <h4 class = "text-center"> Flower Vases </h4>
+              <h4 class = "text-center"> Flower Vase </h4>
               <p class = "text-center"> 
                 An intricate model of a realistic vase containing calla lilies, cosmos, daisies, and jasmines.            
               </p>
