--- a/projects_pages/3d-modeling-projects.html
+++ b/projects_pages/3d-modeling-projects.html
@@ -21,51 +21,47 @@
   </head>
   <body>
     <!-- Navigation Bar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
       <a class = "navbar-brand" href="../index.html">
-        <span><img alt = "Brand" src = "../images/profilePicALT-noName.png"></span>
-          Amy Vargas
+        <img alt = "Brand" src = "../images/profilePicALT-noName.png" alt="Logo" width="24" height="24" class="d-inline-block align-text-top">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      
       <div class="collapse navbar-collapse" id = "navbar">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="../index.html"> Home <span class="sr-only"></span></a>
+          <li class="nav-item active">
+            <a class="nav-link navbar_links" href="../index.html"> Home <span class="sr-only"></span></a>
           </li>
           <li class = "nav-item">
-            <a class = "nav-link" href="../about_me.html">About Me</a>
+            <a class = "nav-link navbar_links" href="../about_me.html">About Me</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Projects </a>
+          <li class="nav-item dropdown navbar_links">
+            <a class="nav-link dropdown-toggle navbar_links" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Projects </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="/projects_pages/game-dev-projects.html">Game Development</a>
-              <a class="dropdown-item" href="/projects_pages/software-projects.html">Software</a>
-              <a class="dropdown-item" href="/projects_pages/3d-modeling-projects.html">3D Modeling</a>
-              <a class="dropdown-item" href="/projects_pages/graphic-design-projects.html">Graphic Design</a>
+              <a class="dropdown-item navbar_drop" href="/projects_pages/game-dev-projects.html">Game Development</a>
+              <a class="dropdown-item navbar_drop" href="/projects_pages/software-projects.html">Software</a>
+              <a class="dropdown-item navbar_drop" href="/projects_pages/3d-modeling-projects.html">3D Modeling</a>
+              <a class="dropdown-item navbar_drop" href="/projects_pages/graphic-design-projects.html">Graphic Design</a>
             </div>
           </li>
         </ul>
-        <input id = "dark-light-event" type="checkbox" checked data-toggle="toggle" data-onstyle="light" data-offstyle="outline-dark" data-on="Light" data-off="Dark" data-style="slow" data-size="sm">
       </div>
     </nav>
     <!-- End Bar -->
 
     <!-- Body Text-->
     <main>
-      <h1 class="text-center">3D Modeling Projects</h1>
-      <p class="text-center"> Dates: 2020 to Current </p>
-      <hr>
+      <h1 class="text-center shadow-dance-text mb-0">3D Modeling Projects</h1>
+      <hr class="mt-4">
 
       <!-- Body Begin -->
-      <section class="dark-sec">
+      <section>
         <div class="container-fluid" id="3d-modeling-projects">
-          <div class = "row d-flex justify-content-center my-5" id = "tinkerer-library">
-            <div class = "col-4">
-              <p> Mar 2023 - May 2023 </p>
-              <div class="card shadow-sm">
+          <div class = "row justify-content-center align-items-center m-5" id = "tinkerer-library">
+            <div class = "col-4 mr-4">
+              <h3 style = "color: #E63946 !important;"> Mar 2023 - May 2023 </h3>
+              <div class="card full-card-project" style="background-color: #E63946">
                 <div id="tinkererLibraryCarouselControls" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -95,23 +91,23 @@
                 </div>
               </div>
               <br>
-              <div class = "d-flex justify-content-center">
+              <div class = "d-flex justify-content-center m-2 project-program-style mx-auto">
                 <img class="mx-2" src="../images/logos/maya-logo.png" alt="autodesk-maya" width="25" height="25"/>
               </div>
             </div>
-            <div class = "col-5 mx-5">
-              <h4 class = "text-center"> Tinkerer Library </h4>
-              <p class = "text-center"> 
+            <div class = "col-5 m-2 project-info-style">
+              <h2 class = "text-center"> Tinkerer Library </h2>
+              <p> 
                 A collection of 24 props reflecting the personality of a robotic character, drawing inspiration from steampunk and cyberpunk elements and rendered in Autodesk Maya.
               </p>
               <br>
-              <p class = "m-0" style="font-weight: bold;"> 3D Enviromental Modeler </p>
+              <h3 class = "m-0"> 3D Enviromental Modeler </h3>
               <p>
                 • Conceptualized and developed a 3D environmental model of a steampunk-inspired room, tailored to reflect the personality of an original character.
                 <br> • Designed 24 custom scenery props using hard surface model techniques.
                 <br> • Applied advanced 3D modeling and texturing techniques to add intricate details into the project.
               </p>
-              <div class = "d-flex justify-content-center">
+              <div class = "d-flex justify-content-center m-3">
                 <a class="fa fa-globe mx-2" href="https://www.artstation.com/artwork/LRgmGk" style="color:#000000;" role="button"> </a>
               </div>
             </div>
@@ -119,10 +115,10 @@
 
           <br>
 
-          <div class = "row d-flex justify-content-center my-5" id = "steampunk-assets">
-            <div class = "col-4">
-              <p> Mar 2023 - May 2023 </p>
-              <div class="card shadow-sm">
+          <div class = "row justify-content-center align-items-center m-5" id = "steampunk-assets">
+            <div class = "col-4 mr-4">
+              <h3 style = "color: #E63946 !important;"> Mar 2023 - May 2023 </h3>
+              <div class="card full-card-project">
                 <div id="steampunkCarouselControls" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -167,23 +163,23 @@
                 </div>
               </div>
               <br>
-              <div class = "d-flex justify-content-center">
+              <div class = "d-flex justify-content-center m-2 project-program-style mx-auto">
                 <img class="mx-2" src="../images/logos/maya-logo.png" alt="autodesk-maya" width="25" height="25"/>
               </div>
             </div>
-            <div class = "col-5 mx-5">
-              <h4 class = "text-center"> Steampunk Assets </h4>
-              <p class = "text-center"> 
+            <div class = "col-5 m-2 project-info-style">
+              <h2 class = "text-center"> Steampunk Assets </h2>
+              <p> 
                 Various textured and untextured assets created as a part of a steampunk-inspired environment and rendered in Autodesk Maya.
               </p>
               <br>
-              <p class = "m-0" style="font-weight: bold;"> 3D Enviromental Modeler </p>
+              <h3 class = "m-0"> 3D Enviromental Modeler </h3>
               <p> 
                 • Modeled 24 custom steampunk props in Autodesk Maya, using advanced hard surface techniques to ensure detailed and authentic designs.
                 <br> • Incorporated references and design inspiration to create unique scenery elements for a steampunk-themed environment.
                 <br> • Applied advanced texturing techniques to enhance the detail and realism of each prop, contributing to a rich, immersive atmosphere.
               </p>
-              <div class = "d-flex justify-content-center">
+              <div class = "d-flex justify-content-center m-3">
                 <a class="fa fa-globe mx-2" href="https://www.artstation.com/artwork/elmxo3" style="color:#000000;" role="button"> </a>
                 <a class="fa fa-globe mx-2" href="https://www.artstation.com/artwork/rJlGz2" style="color:#000000;" role="button"> </a>
                 <a class="fa fa-globe mx-2" href="https://www.artstation.com/artwork/ao0J08" style="color:#000000;" role="button"> </a>
@@ -194,10 +190,10 @@
 
           <br>
 
-          <div class = "row d-flex justify-content-center my-5" id = "the-dining-room">
-            <div class = "col-4">
-              <p> Mar 2021 - May 2021 </p>
-              <div class="card shadow-sm">
+          <div class = "row justify-content-center align-items-center m-5" id = "the-dining-room">
+            <div class = "col-4 mr-4">
+              <h3 style = "color: #E63946 !important;"> Mar 2021 - May 2021 </h3>
+              <div class="card full-card-project" style="background-color: #E63946">
                 <div id="diningRoomCarouselControls" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -227,18 +223,18 @@
                 </div>
               </div>
               <br>
-              <div class = "d-flex justify-content-center">
+              <div class = "d-flex justify-content-center m-2 project-program-style mx-auto">
                 <img class="mx-2" src="https://skillicons.dev/icons?i=ps" alt="photoshop" width="25" height="25"/>
                 <img class="mx-2" src="../images/logos/maya-logo.png" alt="autodesk-maya" width="25" height="25"/>
               </div>
             </div>
-            <div class = "col-5 mx-5">
-              <h4 class = "text-center"> The Dining Room </h4>
-              <p class = "text-center"> 
+            <div class = "col-5 m-2 project-info-style">
+              <h2 class = "text-center"> The Dining Room </h2>
+              <p> 
                 A detailed environmental model of a Victorian-inspired dining room that was rendered in Autodesk Maya.
               </p>
               <br>
-              <p class = "m-0" style="font-weight: bold;"> 3D Environmental Modeler/Designer </p>
+              <h3 class = "m-0"> 3D Environmental Modeler/Designer </h3>
               <p> 
                 • Conceptualized and developed a detailed 3D environmental model portraying a Victorian-inspired dining room, 
                 drawing inspiration from personal real-life surroundings.
@@ -246,7 +242,7 @@
                 props, ensuring precision and realism.
                 <br> • Implemented shading trees, natural lighting, and customized UV maps and textures using Adobe Photoshop.
               </p>
-              <div class = "d-flex justify-content-center">
+              <div class = "d-flex justify-content-center m-3">
                 <a class="fa fa-globe mx-2" href="https://www.artstation.com/artwork/D5wlx9" style="color:#000000;" role="button"> </a>
               </div>
             </div>
@@ -254,10 +250,10 @@
 
           <br>
 
-          <div class = "row d-flex justify-content-center my-5" id = "hand">
-            <div class = "col-4">
-              <p> Mar 2021 - April 2021 </p>
-              <div class="card shadow-sm">
+          <div class = "row justify-content-center align-items-center m-5" id = "hand">
+            <div class = "col-4 mr-4">
+              <h3 style = "color: #E63946 !important;"> Mar 2021 - April 2021 </h3>
+              <div class="card full-card-project">
                 <div id="handCarouselControls" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -287,23 +283,23 @@
                 </div>
               </div>
               <br>
-              <div class = "d-flex justify-content-center">
+              <div class = "d-flex justify-content-center m-2 project-program-style mx-auto">
                 <img class="mx-2" src="../images/logos/maya-logo.png" alt="autodesk-maya" width="25" height="25"/>
               </div>
             </div>
-            <div class = "col-5 mx-5">
-              <h4 class = "text-center"> Individual Hand </h4>
-              <p class = "text-center"> 
+            <div class = "col-5 m-2 project-info-style">
+              <h2 class = "text-center"> Individual Hand </h2>
+              <p> 
                 A human hand, with my own hand as a reference, rendered in Autodesk Maya.
               </p>
               <br>
-              <p class = "m-0" style="font-weight: bold;"> 3D Enviromental Modeler </p>
+              <h3 class = "m-0"> 3D Enviromental Modeler </h3>
               <p> 
                 • Created a highly detailed 3D model of my own hand using organic modeling techniques in Autodesk Maya, capturing intricate anatomical details.
                 <br> • Applied rigging and posing techniques to ensure realistic movement and appearance, enhancing the overall fidelity of the model.
                 <br> • Utilized photographs of my own hand as reference for accuracy in modeling, ensuring a realistic and true-to-life representation.
               </p>
-              <div class = "d-flex justify-content-center">
+              <div class = "d-flex justify-content-center m-3">
                 <a class="fa fa-globe mx-2" href="https://www.artstation.com/artwork/Ge89vQ" style="color:#000000;" role="button"> </a>
               </div>
             </div>
@@ -311,10 +307,10 @@
 
           <br>
 
-          <div class = "row d-flex justify-content-center my-5" id = "amazon">
-            <div class = "col-4">
-              <p> Feb 2021 - Mar 2021 </p>
-              <div class="card shadow-sm">
+          <div class = "row justify-content-center align-items-center m-5" id = "amazon">
+            <div class = "col-4 mr-4">
+              <h3 style = "color: #E63946 !important;"> Feb 2021 - Mar 2021 </h3>
+              <div class="card full-card-project">
                 <div id="amazonCarouselControls" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -344,23 +340,23 @@
                 </div>
               </div>
               <br>
-              <div class = "d-flex justify-content-center">
+              <div class = "d-flex justify-content-center m-2 project-program-style mx-auto">
                 <img class="mx-2" src="../images/logos/maya-logo.png" alt="autodesk-maya" width="25" height="25"/>
               </div>
             </div>
-            <div class = "col-5 mx-5">
-              <h4 class = "text-center"> Amazon Box </h4>
-              <p class = "text-center"> 
+            <div class = "col-5 m-2 project-info-style">
+              <h2 class = "text-center"> Amazon Box </h2>
+              <p> 
                 A rigged and textured 3D model of an Amazon delivery box rendered in Autodesk Maya.
               </p>
               <br>
-              <p class = "m-0" style="font-weight: bold;"> 3D Enviromental Modeler </p>
+              <h3 class = "m-0"> 3D Enviromental Modeler </h3>
               <p> 
                 • Developed a detailed 3D model of an Amazon box using hard surface modeling techniques, ensuring high accuracy and realism in the design.
                 <br> • Rigged the box to simulate realistic folding and unfolding mechanics, replicating the functionality of a real-life box.
                 <br> • Textured the model using real-life photographs, enhancing visual authenticity and detail to closely match the appearance of an actual Amazon box.
               </p>
-              <div class = "d-flex justify-content-center">
+              <div class = "d-flex justify-content-center m-3">
                 <a class="fa fa-globe mx-2" href="https://www.artstation.com/artwork/OGmO3b" style="color:#000000;" role="button"> </a>
               </div>
             </div>
@@ -368,10 +364,10 @@
 
           <br>
 
-          <div class = "row d-flex justify-content-center my-5" id = "flower-vases">
-            <div class = "col-4">
-              <p> Oct 2020 - Nov 2020 </p>
-              <div class="card shadow-sm">
+          <div class = "row justify-content-center align-items-center m-5" id = "flower-vases">
+            <div class = "col-4 mr-4">
+              <h3 style = "color: #E63946 !important;"> Oct 2020 - Nov 2020 </h3>
+              <div class="card full-card-project">
                 <div id="vasesCarouselControls" class="carousel slide" data-ride="carousel">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -407,23 +403,23 @@
                 </div>
               </div>
               <br>
-              <div class = "d-flex justify-content-center">
+              <div class = "d-flex justify-content-center m-2 project-program-style mx-auto">
                 <img class="mx-2" src="../images/logos/maya-logo.png" alt="autodesk-maya" width="25" height="25"/>
               </div>
             </div>
-            <div class = "col-5 mx-5">
-              <h4 class = "text-center"> Flower Vase </h4>
-              <p class = "text-center"> 
+            <div class = "col-5 m-2 project-info-style">
+              <h2 class = "text-center"> Flower Vase </h2>
+              <p> 
                 An intricate model of a realistic vase containing calla lilies, cosmos, daisies, and jasmines.            
               </p>
               <br>
-              <p class = "m-0" style="font-weight: bold;"> 3D Enviromental Modeler </p>
+              <h3 class = "m-0"> 3D Enviromental Modeler </h3>
               <p> 
                 • Created a detailed 3D model of a flower vase with four individual flower models, using organic modeling techniques for high accuracy.
                 <br> • Modeled each flower based on real-life pictures, ensuring realistic representations of natural forms.
                 <br> • Applied intricate detailing to both the vase and flowers, achieving a visually immersive design.
               </p>
-              <div class = "d-flex justify-content-center">
+              <div class = "d-flex justify-content-center m-3">
                 <a class="fa fa-globe mx-2" href="https://www.artstation.com/artwork/n0E1d6" style="color:#000000;" role="button"> </a>
               </div>
             </div>
@@ -434,10 +430,10 @@
     
     <!-- Footer Box-->
     <footer> 
-      <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-        <p> Made using HTML, CSS, and Bootstrap</p>
+      <div class="footer-content text-center p-4">
+        <p class = "footer-text"> Made using HTML, CSS, and Bootstrap</p>
         <!-- FIX: Use JS to display the current year date-->
-        <p> © 2024 </p>
+        <p class = "footer-text"> © 2025 </p>
       </div>    
     </footer>
     <!-- End Footer Box-->
