Minor spelling edit

--- a/projects_pages/graphic-design-projects.html
+++ b/projects_pages/graphic-design-projects.html
@@ -113,7 +113,7 @@
             <div class = "col-5 m-2 project-info-style">
               <h2 class = "text-center"> Nemenberg </h2>
               <p> 
-                Nemenberg is a dynamic WordPress website crafted for a Guatemala-based IT business, serving as a central hub for
+                Nemenberg is a dynamic WordPress website crafted for a Guatemalan-based IT business, serving as a central hub for
                 showcasing the company's mission, services, and expertise. Through its design and organization, it enables visitors
                 to explore the company's offerings and capabilities, effectively reflecting its commitment to excellence in the IT industry.
               </p>
